Add managers to organizations, let admin pick and update an org manager, show manager on orgs table

--- a/frontend/app/templates/admin/organization-edit.hbs
+++ b/frontend/app/templates/admin/organization-edit.hbs
@@ -1,1 +1,1 @@
-{{organization-edit-form form-title="Edita Organización" transitionToOrgs="transitionToOrgs" org=model}}
+{{organization-edit-form form-title="Edita Organización" transitionToOrgs="transitionToOrgs" org=model.org users=model.users}}
