--- a/frontend/app/templates/admin/organization-new.hbs
+++ b/frontend/app/templates/admin/organization-new.hbs
@@ -1,1 +1,1 @@
-{{organization-edit-form form-title="Nueva Organización" transitionToOrgs="transitionToOrgs" org=model}}
+{{organization-edit-form form-title="Nueva Organización" transitionToOrgs="transitionToOrgs" org=model.org users=model.users }}
