--- a/frontend/app/templates/components/organization-edit-form.hbs
+++ b/frontend/app/templates/components/organization-edit-form.hbs
@@ -14,7 +14,22 @@
                             <label>Nombre:</label>
                             {{input value=org.name placeholder="Nombre" class="form-control"}}
                             <label>Manager:</label>
-                            {{input type="submit" value="Crear" class="btn btn-lg btn-block login-btn"}}
+                            <div class="form-select">
+                            {{#power-select
+                                options=users
+                                searchField="firstName"
+                                selected=manager
+                                placeholder="Elige un manager"
+                                onchange=(action "setManager")
+                                as |user|
+                            }}
+                                <p>{{user.firstName}}  {{user.lastName}}</p>
+                            {{/power-select}}
+                            </div>
+                            
+
+
+                            {{input type="submit" value=(if org.id 'Actualizar' 'Crear') class="btn btn-lg btn-block login-btn"}}
                         </fieldset>
                     </form>
                 </div>
