--- a/frontend/app/templates/admin/suborganization-new.hbs
+++ b/frontend/app/templates/admin/suborganization-new.hbs
@@ -1,1 +1,1 @@
-{{suborganization-edit-form form-title="Nueva Suborganización" transitionToSuborgs="transitionToSuborgs" suborg=model}}
+{{suborganization-edit-form form-title="Nueva Suborganización" transitionToSuborgs="transitionToSuborgs" suborg=model.suborg users=model.users orgs=model.orgs}}
