Basic voter handling

--- a/frontend/app/styles/general/_login.sass
+++ b/frontend/app/styles/general/_login.sass
@@ -68,3 +68,12 @@
 
 .vertical-offset-50
   padding-top: 50px
+  &.row
+    margin-right: 0
+
+textarea.form-control
+  resize: none
+
+.reached-infinity
+  display: none
+  
