Changes state input to select

--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -100,17 +100,19 @@
                         </div>
                         <div class="form-gorup row">
                             <div class="col-sm-6">
-                                <label>Estado:</label> {{input value=voter.state class="form-control" placeholder="Estado" }}
+                                <label>Estado:</label>
+                                {{#x-select class="form-control" value=voter.state on-change=(action "updateState" voter) as |st|}}
+                                    {{#st.option value='' disabled=true selected=true hidden=true}}Seleccione una opción{{/st.option}}
+                                    {{#each states as |state idx|}}
+                                        {{#st.option value=idx}}{{state}}{{/st.option}} 
+                                    {{/each}} 
+                                {{/x-select}}
                             </div>
                             <div class="col-sm-6">
                                 <label>Localidad:</label> {{input value=voter.locality placeholder="Localidad" class="form-control"}}
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-sm-3">
-                                <label>Clave de Estado:<span class="text-danger">*</span></label> {{input type="number" min=0 required=true oninput="validity.valid||(value='');" value=voter.state_code placeholder="Estado"
-                                class="form-control"}}
-                            </div>
                             <div class="col-sm-3">
                                 <label>Clave de Municipio:<span class="text-danger">*</span></label> {{input type="number" min=0 required=true oninput="validity.valid||(value='');" value=voter.municipality_code placeholder="Municipio"
                                 class="form-control"}}
