Makes section_code mandatory

--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -118,7 +118,7 @@
                                 class="form-control"}}
                             </div>
                             <div class="col-sm-3">
-                                <label>Clave de Sección:</label> {{input type="number" min=0 oninput="validity.valid||(value='');" value=voter.section placeholder="Sección"
+                                <label>Clave de Sección:<span>*</span></label> {{input type="number" required=true min=0 oninput="validity.valid||(value='');" value=voter.section placeholder="Sección"
                                 class="form-control"}}
                             </div>
                             <div class="col-sm-3">
