Added style to voter-edit-form.hbs

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -130,17 +130,23 @@
   color: black
   font-weight: 600
 
-// VOTES TABLE
+// VOTER TABLE
 
-.votes-table
+.voter-table
   tr
     td
       padding: 5px !important
 
-.votes-table-header
+.voter-table-title
+  margin-top: 0px
+  margin-bottom: 40px
+  text-align: center
+  font-size: 35px
+
+.voter-table-header
   font-weight: 900
 
-.votes-table-content
+.voter-table-content
 
   // ALLOW HORIZONTAL SCROLLING
 
@@ -157,6 +163,54 @@
   overflow-x: auto
   overflow-y: scroll visible
   width: 100%
+
+// VOTER EDIT FORM
+
+.voter-edit-title
+  margin-top: 0px
+  margin-bottom: 40px
+  text-align: center
+  font-size: 35px
+
+.voter-edit-field
+  border: none
+  border-radius: 0 !important
+  box-shadow: none
+  background-color: transparent
+  border-bottom: 3px solid $mediumgray !important
+  padding: 10px 0 !important
+  transition: none !important
+  height: 45px !important
+
+.voter-edit-select
+  border: none
+  border-radius: 0 !important
+  box-shadow: none
+  background-color: transparent
+  border: 3px solid $mediumgray !important
+  padding: 10px 0 !important
+  transition: none !important
+  height: 45px !important
+
+.voter-edit-select-required
+  border: none
+  border-radius: 0 !important
+  box-shadow: none
+  background-color: transparent
+  border: 3px solid $aqua !important
+  padding: 10px 0 !important
+  transition: none !important
+  height: 45px !important
+
+.voter-edit-field-required
+  border: none
+  border-radius: 0 !important
+  box-shadow: none
+  background-color: transparent
+  border-bottom: 3px solid $aqua !important
+  padding: 10px 0 !important
+  transition: none !important
+  height: 45px !important
 
 // ???
 
