--- a/frontend/app/styles/general/_variables.sass
+++ b/frontend/app/styles/general/_variables.sass
@@ -6,7 +6,6 @@ $lightblue: #6fa6cc
 $sidebar-width: 60px
 $sidebar-icon-size: 18px
 
-
 // Alerts
 $alertlightgreen: #43AC6A
 $alertdarkgreen: #3a945b
@@ -15,7 +14,7 @@ $alertdarkblue: #74bfdd
 $alertdarkred: #de2d0f
 $alertlightred: #f04124
 
-// .primary
+// Primary Palette
 $black: #211915
 $aqua: #55cec5
 $blue: #399ed9
@@ -24,5 +23,3 @@ $darkblue: #2f3e4e
 $mediumblue: #4d5b6a
 $mediumgray: #cfdde3
 $lightgray: #ecf0f3
-
-// .secundary
