--- a/frontend/app/templates/ine/voters.hbs
+++ b/frontend/app/templates/ine/voters.hbs
@@ -1,5 +1,5 @@
 <div class="vertical-offset-100 horizontal-padding">
-	<h3 class="admin-table-title">Registro de Estructura</h3>
+	<h3 class="voter-table-title">Registro de Estructura</h3>
 	<div class="table-header">
 		<div class="form-select" style="width: 250px; float: right; padding: 5px;">
 
@@ -19,7 +19,7 @@
 			<div class="scrolling outer">
 				<div class="inner">
 					<table class="table table-striped table-hover table-condensed">
-						<thead class="votes-table-header">
+						<thead class="voter-table-header">
 							<tr>
 								<td>Credencial Elector</td>
 								<td>Vigencia</td>
@@ -69,7 +69,7 @@
 								<td></td>
 							</tr>
 						</thead>
-						<tbody class="votes-table-content">
+						<tbody class="voter-table-content">
 							{{#each model as |voter|}}
 							<tr valign="middle">
 								<td>{{voter.electoral_id_number}}</td>
