--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -173,46 +173,28 @@
   font-size: 35px
 
 .voter-edit-field
-  border: none
-  border-radius: 0 !important
-  box-shadow: none
-  background-color: transparent
-  border-bottom: 3px solid $mediumgray !important
-  padding: 10px 0 !important
-  transition: none !important
-  height: 45px !important
-
-.voter-edit-select
-  border: none
-  border-radius: 0 !important
-  box-shadow: none
-  background-color: transparent
-  border: 3px solid $mediumgray !important
-  padding: 10px 0 !important
-  transition: none !important
-  height: 45px !important
-
-.voter-edit-select-required
-  border: none
-  border-radius: 0 !important
-  box-shadow: none
-  background-color: transparent
-  border: 3px solid $aqua !important
-  padding: 10px 0 !important
-  transition: none !important
-  height: 45px !important
+    border: none
+    border-radius: 0 !important
+    box-shadow: none
+    background-color: transparent
+    border-bottom: 2px solid $mediumgray !important
+    height: 45px !important
+    -webkit-box-shadow: none
+    box-shadow: none
 
 .voter-edit-field-required
-  border: none
-  border-radius: 0 !important
-  box-shadow: none
-  background-color: transparent
-  border-bottom: 3px solid $aqua !important
-  padding: 10px 0 !important
-  transition: none !important
-  height: 45px !important
+  @extend .voter-edit-field
+  border-bottom: 2px solid $aqua !important
 
-// ???
+.voter-edit-select
+  @extend .voter-edit-field
+  border: 2px solid $mediumgray !important
+
+.voter-edit-select-required
+  @extend .voter-edit-field
+  border: 2px solid $aqua !important
+
+//
 
 .switcher-bar-first
   width: 65%
