--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -15,7 +15,9 @@
                         <div class="form-group row">
                             <div class="col-md-6">
                                 <!--<label>Número de Credencial de Elector:<span class="text-danger">*</span></label>-->
-                                {{input value=voter.electoral_id_number required=true placeholder="Número de Credencial de Elector" class="form-control voter-edit-field-required"}}
+                                {{input value=voter.electoral_id_number required=true
+                                placeholder="Número de Credencial de Elector"
+                                class="form-control voter-edit-field-required"}}
                             </div>
                             <div class="col-md-2">
                                 <!--<label>Vigencia de Credencial de Elector:<span class="text-danger">*</span></label>-->
@@ -32,28 +34,34 @@
                         <div class="form-group row">
                             <div class="col-md-3">
                                 <!--<label>Apellido Paterno:<span class="text-danger">*</span></label>-->
-                                {{input value=voter.first_last_name required=true placeholder="Apellido Paterno"
+                                {{input value=voter.first_last_name required=true
+                                placeholder="Apellido Paterno"
                                 class="form-control voter-edit-field-required"}}
                             </div>
                             <div class="col-md-3">
                                 <!--<label>Apellido Materno:</label>-->
-                                {{input value=voter.second_last_name placeholder="Apellido Materno"
+                                {{input value=voter.second_last_name
+                                placeholder="Apellido Materno"
                                 class="form-control voter-edit-field-required"}}
                             </div>
                             <div class="col-md-3">
                                 <!--<label>Primer Nombre:<span class="text-danger">*</span></label>-->
-                                {{input value=voter.first_name required=true placeholder="Primer Nombre" class="form-control voter-edit-field-required"}}
+                                {{input value=voter.first_name required=true
+                                placeholder="Primer Nombre"
+                                class="form-control voter-edit-field-required"}}
                             </div>
                             <div class="col-md-3">
                                 <!--<label>Segundo Nombre:</label>-->
-                                {{input value=voter.second_name placeholder="Segundo Nombre" class="form-control voter-edit-field"}}
+                                {{input value=voter.second_name placeholder="Segundo Nombre"
+                                class="form-control voter-edit-field"}}
                             </div>
                         </div>
                         <div class="form-group row">
                             <div class="col-md-3">
                                 <!--<label>Fecha de Nacimiento:<span class="text-danger">*</span></label>-->
-                                {{bootstrap-datepicker value=voter.date_of_birth required=true language="es"
-                                placeholder="Fecha de Nacimiento" class="form-control voter-edit-field-required" format="dd/mm/yyyy" }}
+                                {{bootstrap-datepicker value=voter.date_of_birth required=true language="es" format="dd/mm/yyyy"
+                                placeholder="Fecha de Nacimiento"
+                                class="form-control voter-edit-field-required"}}
                             </div>
                             <div class="col-md-2">
                                 <!--<label>Genero:<span class="text-danger">*</span></label>-->
@@ -69,7 +77,8 @@
                         <div class="form-gorup row">
                             <div class="col-sm-4">
                                 <!--<label>Colonia:<span class="text-danger">*</span></label>-->
-                                {{input value=voter.suburb required=true placeholder="Colonia"
+                                {{input value=voter.suburb required=true
+                                placeholder="Colonia"
                                 class="form-control voter-edit-field-required"}}
                             </div>
                             <div class="col-sm-2">
